fix: input spacing

--- a/apps/web/src/app/dsfr-overrides.css
+++ b/apps/web/src/app/dsfr-overrides.css
@@ -123,6 +123,11 @@
     margin-bottom: 16px;
 }
 
+.fr-input-group:not(:last-child),
+.fr-select-group:not(:last-child) {
+    margin-bottom: 16px;
+}
+
 .fr-btn--danger {
     background-color: var(--background-flat-error);
 
